[package]
name = "api"
version = "0.1.0"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
bourso_api = { path = "../bourso_api" }
log = "0.4.21"
